--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -1,23 +1,11 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> {% block title %} Shop {% endblock %} </title>
-
-</head>
-<body>
-<header>
-    <h1>My shop</h1>
-</header>
-=======
 {% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
     <title>{% block title %}My shop{% endblock %}</title>
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    <link href="{% static " css
+    /base.css" %}" rel="stylesheet">
 </head>
 <body>
 <div id="header">
@@ -32,6 +20,5 @@
     {% block content %}
     {% endblock %}
 </div>
->>>>>>> origin/master
 </body>
 </html>
