--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -1,12 +1,12 @@
-{% extends 'shop/base.html' %}
+{% extends "shop/base.html" %}
 {% load static %}
-
 {% block title %}
 {{ product.name }}
 {% endblock %}
 {% block content %}
 <div class="product-detail">
-    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
+    <img src="{% if product.image %}{{ product.image.url }}{% else %}
+ {% static " img/no_image.png" %}{% endif %}">
     <h1>{{ product.name }}</h1>
     <h2>
         <a href="{{ product.category.get_absolute_url }}">
@@ -14,7 +14,6 @@
         </a>
     </h2>
     <p class="price">${{ product.price }}</p>
-    {{ product.descriprtion|linebreaks }}
-
+    {{ product.description|linebreaks }}
 </div>
-{% endblock %}
+{% endblock %}S
