'Починил' отображение описание товара

--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -19,6 +19,6 @@
         {% csrf_token %}
         <input type="submit" value="Add to cart">
     </form>
-    {{ product.description|linebreaks }}
+    {{ product.descriprtion|linebreaks }}
 </div>
 {% endblock %}
