--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -16,8 +16,8 @@
             Your cart:
                 <a href="{% url 'cart:cart_detail' %}">{{ total_items }} item{{total_items|pluralize }}, {{ cart.get_total_price }}
                 </a>
-        {% else %}
-        Your cart is empty.
+        {% elif  not order %}
+            Your cart is empty
         {% endif %}
     {% endwith %}
 </div>
